# resolv

./: README.md  pyproject.toml
src/resolv/: main.py
src/resolv/agents/: planner.py  root_cause.py  triage.py  verifier.py
src/resolv/contracts/: hypothesis.py  incident.py  plan.py  verification.py
src/resolv/orchestration/: state.py  workflow.py
src/resolv/scenarios/latency_spiral/: incident_seed.json
tests/: test_workflow.py
