[project]
name = "resolv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shrey.gajjar", email = "shreydotgajjar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
resolv = "resolv.main:app"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
